--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,8 +8,7 @@
     font-weight: var(--fa-style, 900); }
   
   .fa-solid,
-  .fa-regular
-    font-family: 'Source Sans Pro'; }
+  .fa-regular,
   .fa-brands,
   .fas,
   .far,
@@ -34,7 +33,7 @@
   
   .fab,
   .fa-brands {
-    font-family: 'Source Sans Pro'; }
+    font-family: 'Font Awesome 6 Brands'; }
   
   .fa-1x {
     font-size: 1em; }
